--- a/logsys/templates/logsys/singup.html
+++ b/logsys/templates/logsys/singup.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 
 {% block login %}
-        <form class="form col-md-4 col-md-offset-4" action="/auth/singup/" method="post">
+        <form class="form col-md-4 col-md-offset-4" action="{% url 'logsys:sing_up' %}" method="post">
             {% csrf_token %}
             <div>
                 {{ form }}
