--- a/task/templates/task/tasks.html
+++ b/task/templates/task/tasks.html
@@ -5,7 +5,7 @@
 <html>
 <head>
     <meta name="'viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'static/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
 <body>
     {% if username %}
@@ -14,11 +14,9 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th>ID</th>
         <th>Name of task</th>
         <th>Description</th>
         <th>Date of publication</th>
-        <th>From</th>
         <th>Deleting</th>
       </tr>
     </thead>
@@ -26,11 +24,9 @@
     {% for task in tasks %}
       <tr>
       {% if task.task_from.username == username %}
-          <td>{{task.id}}</td>
           <td>{{task.name_text}}</td>
           <td>{{task.description_text}}</td>
-          <td>{{task.pub_date}}</td>
-          <td>{{task.task_from.username}}</td>
+          <td>{{task.pub_date|date:'d-m-Y H:i'}}</td>
           <td><a href="/delete/{{ task.id }}/"><span class="glyphicon glyphicon-remove"></span> Remove</a></td>
       {% endif %}
       </tr>
@@ -39,7 +35,7 @@
   </table>
 
   <div class="pull-right" >
-    <a href="/addtask/"><button type="button" class="btn btn-primary" >add task</button></a>
+    <a href="{% url 'task:addtask' %}"><button type="button" class="btn btn-primary" >add task</button></a>
   </div>
 </div>
     {% endif %}
