--- a/task/templates/task/addtask.html
+++ b/task/templates/task/addtask.html
@@ -2,6 +2,20 @@
 {% load staticfiles %}
 
 {% block addtask %}
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css">
+<script type="text/javascript" src="{%  static 'js/jquery-3.1.1.js'%}"></script>
+<script type="text/javascript" src="{% static 'js/jquery-ui.js' %}"></script>
+ <script>
+  $(function() {
+    $( ".datepicker" ).datepicker({
+      changeMonth: true,
+      changeYear: true,
+      yearRange: "2000:2020"
+      // You can put more options here.
+
+    });
+  });
+  </script>
 <div class="form-group col-md-4 col-md-offset-4">
     <h1>New task</h1>
     <form role="form" action="tasks.html"  class="post-form" method="post">{% csrf_token %}
