--- a/task/templates/task/tasks.html
+++ b/task/templates/task/tasks.html
@@ -6,6 +6,7 @@
 <head>
     <meta name="'viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'mystyle.css' %}">
 </head>
 <body>
     {% if username %}
@@ -17,6 +18,7 @@
         <th>Name of task</th>
         <th>Description</th>
         <th>Date of publication</th>
+        <th>Extreme date for completion</th>
         <th>Deleting</th>
       </tr>
     </thead>
@@ -24,10 +26,11 @@
     {% for task in tasks %}
       <tr>
       {% if task.task_from.username == username %}
-          <td>{{task.name_text}}</td>
-          <td>{{task.description_text}}</td>
-          <td>{{task.pub_date|date:'d-m-Y H:i'}}</td>
-          <td><a href="/delete/{{ task.id }}/"><span class="glyphicon glyphicon-remove"></span> Remove</a></td>
+          <td>{{ task.name_text }}</td>
+          <td>{{ task.description_text }}</td>
+          <td class="cent">{{ task.pub_date|date:'d-m-Y' }}</td>
+          <td class="cent">{{ task.date_to_finish|date:'d-m-Y' }}</td>
+          <td class="cent"><a href="/delete/{{ task.id }}/"><span class="glyphicon glyphicon-remove"></span> Remove</a></td>
       {% endif %}
       </tr>
     {% endfor %}
